[metadata]
name = fly_jwt
url = https://github.com/tatsuya4649/fly_jwt
license = MIT
author = tatsuya.s
description = JWT library for fly
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fly, jwt, security
classifiers = 
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Internet
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: HTTP Servers
	Topic :: Security
	Topic :: System :: Networking

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.6
